basics added to html files

--- a/themis_upload.html
+++ b/themis_upload.html
@@ -3,41 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
+    <title>Themis AI Watch</title>
     <meta name="description" content="A simple web page">
-    <link rel="stylesheet" href="styles.css"> <!-- You can link your CSS file here -->
+    <link rel="stylesheet" href="assets/style.css"> <!-- You can link your CSS file here -->
 </head>
 <body>
     <header>
-        <h1>Welcome to My Web Page</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Themis</h1>
     </header>
 
     <main>
-        <section>
-            <h2>About Us</h2>
-            <p>This is a brief description of our website.</p>
-        </section>
-
-        <section>
-            <h2>Services</h2>
-            <ul>
-                <li>Service 1</li>
-                <li>Service 2</li>
-                <li>Service 3</li>
-            </ul>
-        </section>
+        <p>This is a brief description of our website.</p>
+        <button></button>
     </main>
 
     <footer>
-        <p>&copy; 2023 My Web Page</p>
+        <p class="footerText">Themis &copy; 2023</p>
+        <p class="footerText">Ellie Hechavarria | Grace Hechavarria | Monica Steinberg | Shelly Penichet</p>
     </footer>
 </body>
 </html>
