--- a/themis_verdict.html
+++ b/themis_verdict.html
@@ -3,36 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
+    <title>Themis Verdict</title>
     <meta name="description" content="A simple web page">
-    <link rel="stylesheet" href="styles.css"> <!-- You can link your CSS file here -->
+    <link rel="stylesheet" href="assets/style.css"> <!-- You can link your CSS file here -->
 </head>
 <body>
     <header>
-        <h1>Welcome to My Web Page</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Themis</h1>
     </header>
 
     <main>
-        <section>
-            <h2>About Us</h2>
-            <p>This is a brief description of our website.</p>
-        </section>
+            <section class="dark-background">
+                <!-- verdict -->
+                <h2>valid</h2>
+            </section>
+            <section class="dark-background">
+                <div>
+                    <!-- language errors -->
+                    <p id="lang-err">10</p>
+                    <p class="err-title">language errors</p>
+                </div>
+                <div>
+                    <!-- discrepencies -->
+                    <p id="discrepency">4</p>
+                    <p class="err-title">discrepencies</p>
+                </div>
+                <div>
+                    <!-- percentage of ai generated -->
+                    <p id="percent-err">98%</p>
+                    <p class="err-title">ai generated</p>
+                </div>
+
+                <p> 
+                    contact someone from the company for verification...
+                </p>
+                <p>
+                    000-000-0000<br>
+                    email@domain.com<br>
+                    0000 NE 111 AVE<br>
+                    Biscayne Bay, Fl 2233
+                </p>
+            </section>
+            <button></button>
 
         <section>
-            <h2>Services</h2>
-            <ul>
-                <li>Service 1</li>
-                <li>Service 2</li>
-                <li>Service 3</li>
-            </ul>
+            <!-- image -->
         </section>
     </main>
 
