--- a/themis_upload.html
+++ b/themis_upload.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Themis AI Watch</title>
     <meta name="description" content="A simple web page">
+    <link href='https://fonts.googleapis.com/css?family=Kulim Park' rel='stylesheet'>
     <link rel="stylesheet" href="assets/style.css"> <!-- You can link your CSS file here -->
 </head>
 <body>
-    <header>
-        <h1>Themis</h1>
-    </header>
+        <header>
+            <img src="/assets/images/logo-themis.svg" alt="themis logo" id="logo-image">
+        </header>
 
-    <main>
-        <p>This is a brief description of our website.</p>
-        <button></button>
-    </main>
-
+        <main>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat
+                <br>Lorem ipsum dolor!!
+            </p>
+            <button></button>
+            
+        </main>
     <footer>
         <p class="footerText">Themis &copy; 2023</p>
         <p class="footerText">Ellie Hechavarria | Grace Hechavarria | Monica Steinberg | Shelly Penichet</p>
