changes made...tears unshed

--- a/themis_verdict.html
+++ b/themis_verdict.html
@@ -67,5 +67,7 @@
             <p class="footerText">Themis &copy; 2023</p>
             <p class="footerText">Ellie Hechavarria | Grace Hechavarria | Monica Steinberg | Shelly Penichet</p>
         </footer>
+
+        <script src="./assets/script.js"></script>
 </body>
 </html>
