The API is finally working!!!

--- a/themis_verdict.html
+++ b/themis_verdict.html
@@ -17,7 +17,7 @@
             <section id="stats-verdict">
                 <section id="verdict" class="dark-background">
                     <!-- verdict -->
-                    <h2>valid</h2>
+                    <h2 id="verdict-text">Evaluating</h2>
                 </section>
                 <div class="dark-background" id="stats">
                     <div class="stats-items" id="lang">
