added text instead of Lorem ipsum

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <main id="main-upload">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat
-                <br>Lorem ipsum dolor!!
+                To ensure your online safety, our website offers a user-friendly solution for checking the legitimacy of your emails. To begin, simply upload a screenshot of the email in question. Our advanced algorithms will then analyze the email for common signs of grammar and language errors, as well as typical phishing discrepancies.
+                <br><br>What sets us apart is our emphasis on detecting AI-generated content, as modern phishing attacks have become more sophisticated thanks to AI technology. By identifying the extent to which the email's content is AI-generated, we can provide you with valuable insights into its authenticity. Stay ahead of cyber threats by verifying your emails with us 
+                <u><b style="color: #ff0400;">today</b></u>, and keep your online world secure.
             </p>
             <!-- <form action="upload.php" method="post" enctype="multipart/form-data">
                 <label for="photo-upload" style="cursor: pointer;">
