Getting work done! We slay!

--- a/themis_verdict.html
+++ b/themis_verdict.html
@@ -40,8 +40,8 @@
                 </div>
 
                 <section>
-                    <p> 
-                        Please do not rely solely on the verdict, and please contact your local branch to verify the validity of the email before further contact. Below is the contact information of a branch near you.
+                    <p id="verdict-description"> 
+                        Please do not rely solely on the verdict, and contact your local branch to verify the validity of the email before further contact. Below is the contact information of a branch near you.
                     </p>
                     <br>
                     <p>
